the assembly was made on vds. the db connection string is encapsulated

--- a/TelegramBot/App.config
+++ b/TelegramBot/App.config
@@ -1,7 +1,7 @@
 ﻿<?xml version="1.0" encoding="utf-8" ?>
 <configuration>
 	<connectionStrings>
-		<add connectionString="Data Source=(LocalDB)\MSSQLLocalDB;AttachDbFilename=C:\Users\ntwdc\source\repos\TelegramBot\TelegramBot\TelegramBotDB.mdf;Integrated Security=True" name="LocalDB"/>
+		<add connectionString="Server = localhost; Database = BotDB;User Id=SA;Password=AvisaT53@;" name="LocalDB"/>
 		<add connectionString="6181768808:AAEPMUlSlb5fYECXKTxvQwD0f2ORDU9LoXY" name="token"/>
 	</connectionStrings>
 </configuration>
