оптимизирована выгрузка в БД, произведен рефакторинг для дальнейшего масштабирования

--- a/TelegramBot/App.config
+++ b/TelegramBot/App.config
@@ -2,6 +2,8 @@
 <configuration>
 	<connectionStrings>
 		<add connectionString="Server = localhost; Database = BotDB;User Id=SA;Password=AvisaT53@;" name="LocalDB"/>
-		<add connectionString="6181768808:AAEPMUlSlb5fYECXKTxvQwD0f2ORDU9LoXY" name="token"/>
+		<add connectionString="Data Source=(LocalDB)\MSSQLLocalDB;AttachDbFilename=C:\Users\ntwdc\source\repos\TelegramBot\TelegramBot\TelegramBotDB.mdf;Integrated Security=True" name="debugDB"/>
+		<add connectionString="6181768808:AAEPMUlSlb5fYECXKTxvQwD0f2ORDU9LoXY" name="releaseToken"/>
+		<add connectionString="6206880800:AAEJhQglpNQApcq0w0wmJR8IgnI_QXmMKvM" name ="debugToken"/>
 	</connectionStrings>
 </configuration>
